fancy alerts work

--- a/WebApp/Views/Appointment/PartialPending.cshtml
+++ b/WebApp/Views/Appointment/PartialPending.cshtml
@@ -96,7 +96,8 @@ else
         //alert(consultID);
         if(consultID==0)
         {
-            alert('Consultation not found for this appointment.');
+            //alert('Consultation not found for this appointment.');
+            showAlert('Alert','Consultation not found for this appointment.');
             return;
         }
         objCRR["userID"] = '@SessionHandler.UserInfo.userId.ToString()';
