--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -295,6 +295,30 @@
             <!-- /footer content -->
         </div>
     </div>
+    <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1">
+        <div class="modal-dialog" role="document" style="width: 350px;">
+            <div class="modal-content" style="border-radius: 0;">
+                <div class="modal-header text-center" style="background: #E4F1FE; border-bottom-color: #c3bebe;">
+                    <h2 style="margin: 0; color: #337ab7" id="heading"><b></b></h2>
+                </div><!--/.modal header-->
+                <div class="modal-body text-left" style="text-align:center;">
+                    <p class="text-center" style="color: #375781;" id="bodytext"></p>
+                    <button style="width: 29%; border-radius: 0; padding: 15px -15px; font-size: 20px;" onclick="$('#myModal1').modal('hide');" type="button" class="btn btn-primary">OK</button>
+                </div><!--/.modal body-->
+            </div>
+        </div>
+    </div><!-- mymodal1 -->
+    <script>
+    var mymodal = $('#myModal1');
+    function showAlert(heading,body)
+    {
+
+        mymodal.find('#heading').text(heading);
+        mymodal.find('#bodytext').text(body);
+        mymodal.modal('show');
+    }
+
+    </script>
     <script type="text/javascript">
        
 
@@ -325,7 +349,8 @@
             }
 
             if (oPatInfo == null) {
-                alert('Patient is not online now');
+                showAlert('Alert', 'Patient is not online now');
+                //alert('Patient is not online now');
                 return;
             }
 
@@ -408,11 +433,13 @@
             };
 
             chat.client.patientAcceptedCall = function (patUserName, patId, appId) {
-                alert('Patient ' + patUserName + ' accepted call. this alert is in _DoctorLayout. NEed to redirect to page');
+                showAlert('Alert', 'Patient ' + patUserName + ' accepted call. this alert is in _DoctorLayout. Need to redirect to page');
+                //alert('Patient ' + patUserName + ' accepted call. this alert is in _DoctorLayout. NEed to redirect to page');
             }
 
             chat.client.patientRejectedCall = function (patUserName, patId, appId) {
-                alert('Patient ' + patUserName + ' rejected call.this alert is in _DoctorLayout');
+                showAlert('Alert', 'Patient ' + patUserName + ' rejected call.this alert is in _DoctorLayout');
+                //alert('Patient ' + patUserName + ' rejected call.this alert is in _DoctorLayout');
             }
 
             chat.client.patientRedirectedToCallHandle = function (consultId, patId, patName) {
@@ -434,7 +461,7 @@
                     var txt = "";
                     //alert(msg);
                     var fromJson = JSON.parse(msg);
-
+                    //showAlert('', fromJson.name + " want to have a video consultation, Please press OK to accept!");
                     var confirmCall = confirm(fromJson.name + " want to have a video consultation, Please press OK to accept!");
                     if (confirmCall == true) {
                         txt = "Accepted";
