signalR revamp.. patients and doctors groups added join mechanism changed signalR added on VC page consultID and tokbox info sent via signalR between userss

--- a/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
@@ -82,11 +82,11 @@ else
     var _objConsult = {};
 
     function createConsultFromDoctor(doctorID,patientID,appID)
-    {
+    {debugger;
         
         var oPatInfo = null;
         for (var i = 0; i < availablePatients.patient.length; i++) {
-            if (availablePatients.patient[i].patId == patId) {
+            if (availablePatients.patient[i].patId == patientID) {
                 oPatInfo = availablePatients.patient[i];
                 break;
             }
