doctor bussy status implemeted in signalR. now user become unavailabel if he is on a video call page

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -402,21 +402,9 @@
                 }
 
 
-                //$.each(message, function (index, value) {
-                //    $.each(message, function (index, value1) {
-                //        availablePatients.patient.push({
-                //            connectionId: value1.Value.ConnectionId,
-                //            firstName: value1.Value.FirstName,
-                //            lastName: value1.Value.LastName,
-                //            userName: value1.Value.UserName,
-                //            patId: value1.Value.Id
-                //        });
-                //    });
-                //});
-
-                if (handleOnlinePatientsDisplay) {
+             /*   if (handleOnlinePatientsDisplay) {
                     handleOnlinePatientsDisplay();
-                }
+                }*/
 
             };
 
