view doctor profile from see doctor module

--- a/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
+++ b/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
@@ -29,7 +29,7 @@ else
             <img src="@(item.ProfilePhotoBase64)" alt="" class="img-circle img-responsive m-b-10 m-t-0" style="margin: 0 auto;display: inline-block;">
             <h2 class="m-0">
 
-                <a href="javascript(void);" class="thumbnail-col-inner m-b-15" data-toggle="modal" data-target="#myModal2" style="word-wrap: break-word;font-size: 12px">
+                <a href="" onclick='showProfile(@item.doctorID)' class="thumbnail-col-inner m-b-15" data-toggle="modal" data-target="#myModal8" style="word-wrap: break-word;font-size: 12px">
                     Dr.@item.firstName &nbsp; @item.lastName
                 </a>
 
