--- a/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
@@ -8,6 +8,7 @@
 @if (Model != null && Model.appID!=0)
 {
     var patientName = "";
+    long patientid=0;
     var age = "N.A";
     var gender = "N.A";
     var cellPhone = "N.A";
@@ -25,6 +26,7 @@
     if (Model.PatientVM!=null)
     {
         patientName = Model.PatientVM.patientName;
+        patientid = Model.PatientVM.patientid;
         if (Model.PatientVM.GetAge() != null)
         { age = Model.PatientVM.GetAge(); }
         if (Model.PatientVM.patientGender != null)
@@ -96,7 +98,10 @@
 
             </div>
             <div class="name-sec">
-                <h2>@patientName</h2>
+                <h2>
+                    <a href='' onclick='showProfile(@patientid)' id="viewprofile" data-toggle="modal" data-target='#myModal8'>
+                        @patientName</a>
+                </h2>
                 <p style="font-size:10px">
                     @age<br>
                     Gender: @gender<br>
