--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -373,7 +373,7 @@
                 if (msgFrom != "ChatHub") {
                     debugger;
                     var msgJson = JSON.parse(msg);
-                    alert(msgJson.status);
+                 //   alert(msgJson.status);
                     if (msgJson.status == 'tokbox') {
                         alert('tokbox info recieved:' + msgJson.name);
                         localStorage.setItem('tokbox', msgJson.name);
@@ -448,6 +448,7 @@
                             //Redirect doctor to call
                             window.location = '@Url.Action("Index","UserChat")';
                         }
+                        else alert('Err in getting tokbox info ');
                     });
 
 
