--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -44,6 +44,8 @@
     <script src="@Url.Content("~/Scripts/general.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.cookie.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.signalR-2.2.1.min.js")"></script>
+
+    <script src="@Url.Content("~/signalr/hubs")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.dataTables.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/dataTables.bootstrap.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/dataTables.buttons.min.js")"></script>
