utc conversion issue resolvednow zoneID will be used for conversion at server end

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -21,6 +21,7 @@
     <link href="@Url.Content("~/Content/css/select2.min.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/css/pnotify.css")" rel="stylesheet">
     <link href="@Url.Content("/Content/css/green.css")" rel="stylesheet" />
+    <link href="@Url.Content("/Content/css/dataTables.bootstrap.min.css")" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     @*<script type="text/javascript" src="https://rawgit.com/FezVrasta/bootstrap-material-design/master/dist/js/material.min.js"></script>*@
