--- a/WebApp/Views/DoctorAppointment/Index.cshtml
+++ b/WebApp/Views/DoctorAppointment/Index.cshtml
@@ -189,4 +189,21 @@
     }
 </script>
 
+<script type="text/javascript">
+        $(document).ready(function () {
+
+            if('@SessionHandler.UserInfo.timeZone'=='')
+            {
+                new PNotify({
+                    title: 'Info',
+                    text: "Please update your timezone.",
+                    type: 'info',
+                    styling: 'bootstrap3'
+                });
+                window.location = '@Url.Action("Index","DoctorProfile")';
+
+            }
+        });
+</script>
+
 
